# structured_testing

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  all_nodes.bag  package.xml  setup.py
doc/: ContributionsREADME.md
documentation/: BasicExample.md  ObserverDefinition.md  SampleObservers.md
launch/: testA.launch  testB.launch  test_launch.launch
src/: base_observer.py  prepare_launch.py  sim_yaml_parser.py  start_sim.py
src/common/: CMakeLists.txt  package.xml  ros1_mapping.yaml
src/common/msg/: AccInputMsg.msg  AccOutputMsg.msg  AebOutputMsg.msg  AssociatedMeMsg.msg  AssociatedObjectMsg.msg  AssociatedRadarMsg.msg  BinaryClassMsg.msg  CanCommsDataMsg.msg  DriveCtrlInputMsg.msg  FilteredObjectMsg.msg  GroundTruth.msg  IntxnInfoMsg.msg  MobileyeObjectDataMsg.msg  ObjectDeletionMsg.msg  RadarObjectDataMsg.msg  RawLaneDataMsg.msg  RawSensorObjectDataMsg.msg  SensorDiagnosticDataMsg.msg  SudoDriverInputMsg.msg  TargetOutputMsg.msg  TrackedOutputMsg.msg  V2xDataMsg.msg
src/common/srv/: EnvStateSrv.srv  SensorDiagnosticFlagCh2.srv  SensorDiagnosticFlagCh3.srv  SensorDiagnosticFlagCh4.srv
src/csv_converter/: package.xml  setup.cfg  setup.py
src/csv_converter/csv_converter/: converter_node.py  run_converter.py
src/csv_converter/test/: ground_truth_output.csv  stock_front_cam_output.csv  stock_long_range_radar_output.csv
src/launch/: bridge_test_r2.xml
src/master_task/: CMakeLists.txt  package.xml
src/master_task/include/: master_task.h
src/master_task/src/: master_task.cpp  master_task_main.cpp
src/master_task/test/: test_master_task.cpp
src/observers/: __init__.py  base_observer.py  frequency_observer.py  heartbeat_observer.py  in_range_observer.py  min_max_observer.py  monotonic_observer.py
src/perception_kalman/: package.xml  setup.cfg  setup.py
src/perception_kalman/perception_kalman/: perception_kalman.py
src/perception_kalman/test/: deprecated_test_percep_kf_example.py  test_autoware.py  try_bag_process.py
src/sensor_fusion/: CMakeLists.txt  package.xml
src/sensor_fusion/include/: data_association.h  env_state.h  mobileye_obj.h  object_state.h  object_state_da.h  radar_obj.h
src/sensor_fusion/src/: dash.py  data_association_functions.cpp  data_association_node.cpp  env_state_functions.cpp  env_state_node.cpp  object_state.cpp  test_pub.py
src/sensor_fusion/test/: test_autoware.py  test_data_association.cpp  test_env_state.cpp
src/structured_testing/: README.md  setup.cfg  setup.py
src/structured_testing/launch/: my_system_launch.launch  my_test_example.launch
src/structured_testing/structured_testing/: check_results.py  sim_yaml_parser.py  start_sim.py
src/structured_testing/structured_testing/observers/: __init__.py  base_observer.py  frequency_observer.py  in_range_observer.py  min_max_observer.py  monotonic_observer.py  precision_recall_observer.py
src/structured_testing/test/: my_test_example.sim  my_test_example.simresults
src/structured_testing/test/Test1_2022-08-05-13-21-20/: metadata.yaml  metadata.yaml.bak
src/structured_testing/test/int_test_bag_1/: metadata.yaml
src/structured_testing/test/integration_testing/: my_test_example.sim  my_test_example.simresults
src/structured_testing/test/sys_test_bag_1/: metadata.yaml  sys_test_bag_1.db3
src/structured_testing/test/system_testing/: my_system_test.sim  my_system_test.simresults
structured_testing/: check_results.py  ros2bag_helper.py  sim_yaml_parser.py  start_sim.py
structured_testing/observers/: base_observer.py  calc_ospa.py  delta_observer.py  f1_score_observer.py  frequency_observer.py  heartbeat_observer.py  in_range_observer.py  min_max_observer.py  ospa_observer.py  template_observer.py
test/: example.sim  test_observers.py
test/basic_example/: basic_test.sim  basic_test.simresults  test_publisher.py
test/basic_example/MonoIncreasingPub/: MonoIncreasingPub.db3  metadata.yaml
test_files/: example.simresults
