<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="uwaft.ecocar@gmail.com">uwaft</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="ros1_mapping.yaml"/>
  </export>
</package>
